tests/fail/fail_invalid_assignment_target.kr
fn identidade(nter valor) nter {
    divolvi valor;
}

fn inisiu() {
    identidade(1) = 2;
}
